# StrucPy

./: .coveragerc  .gitignore  .readthedocs.yaml  DataBoxPlot.xlsx  Example1.py  Example1.xlsx  Example2.py  Example3.py  Example4.py  Example5.py  Example6.py  Example7.py  LICENSE  README.md  SUNBURST.PY  TO be change.txt  Test1.py  Test2.py  Test3.py  Test4.py  Test5.py  Test6.py  Test7.py  boxplot.py  model3DEx1.html  outputEx1.xlsx  packF.xlsx  pyproject.toml  requirement.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: Tests.yml  python-app.yml  python-package.yml  tests.yml
Examples/: Example1.py  Example2.py  Example3.py  Example4.py  Example5.py  Example6.py  Example7.py  JORS_Example.py  requirements.txt
InputFiles/: Example1.xlsx  Example2.xlsx  Example3.xlsx  Example4.xlsx  Example5.xlsx  Example6.xlsx  Example7.xlsx  JORS_Example.xlsx  Testfile1_inputfile.xlsx  Testfile4.xlsx
Outputfiles/: output_EXAMPLE1.xlsx  output_EXAMPLE2.xlsx
StrucPy/: RCFA.py  _RCSingle.py  __init__.py  _arrangeCal.py  _forcesCal.py  save.py  try1.py
docs/: requirements.txt
docs/images/: Input Examples file .xlsx  Input file screenshots.xlsx
docs/source/: Examples.rst  Input Parameters.rst  InputExample.rst  Installation.rst  License.rst  (+7 more)
plots/: Ex1_SFBMD.html  Ex1_defG.html  Ex1_defL.html  Ex4_SFBMD.html  Ex4_defG.html  Ex4_defL.html  Ex4_model3D.html  Ex5_SFBMD.html  Ex5_defG.html  Ex5_defL.html  Ex5_model3D.html  Example1-Deflection47_Global.html  Example1-Deflection47_Local.html  Example1-Final_Model.html  Example1-Initial_Model.html  Example1-SFBMD47.html
test/: inputfile_RCFA_3D_Frame.xlsx  test_RCFA.py
tests/: inputfile_RCFA_beam.xlsx  test_RCFA.py
(+12 files in other folders)
