[metadata]
name = StrucPy
version = 0.0.1
author = Tabish Izhar
author_email = tizhar@iul.ac.in
description = Object Oriented Structural Analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TabishIzhar/StrucPy.git
project_urls =
    Bug Tracker = https://github.com/TabishIzhar/StrucPy/issues
license = GNU LGPLv2.1
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy==1.23.3
    openpyxl==3.0.10
    pandas==1.4.4
    plotly==5.10.0
    ray==2.6.1

[options.packages.find]
where = src